--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,7 @@ img {
 }
 
 #header {
-    background-color: #3333ff;
+    background-color: #9BCBEB;
     color: whitesmoke;
     text-shadow: 5px 5px 15px #000000;
     font-family: 'Passion One', cursive;
@@ -11,7 +11,7 @@ img {
 }
 
 body {
-    background-image: url(../images/checkerfloor.png);
+    background-image: url(../images/tablecloth-texture.png);
     background-repeat: repeat;
 }
 
