--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,4 +46,70 @@
             </form>
         </div>
     </div>
+    
+    <!-- Footer -->
+    <div id="footer" class="page-footer font-small rounded pt-4">
+
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
+
+            <!-- Grid row -->
+            <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-6 mt-md-0 mt-3">
+
+                <!-- Content -->
+                <h5 class="text-uppercase">Eat-Da-Burger App</h5>
+                <p class="ts-none">Thank you for coming to Eat-Da-Burger. Eat-Da-Burger is a burger menu app. Thank you come again!</p>
+
+            </div>
+            <!-- Grid column -->
+
+            <hr class="clearfix w-100 d-md-none pb-3">
+
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase">Portfolio</h5>
+
+                <ul class="list-unstyled ts-none">
+                    <li>
+                        <a href="https://jdb443.github.io/">https://jdb443.github.io/</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase">Github</h5>
+
+                <ul class="list-unstyled ts-none">
+                    <li>
+                        <a href="https://github.com/jdb443/Burger">Github Repo</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="https://jdb443.github.io">Jonathan Behar</a>
+        </div>
+        <!-- Copyright -->
+
+    </div>
+    <!-- Footer -->
 </div>
